gcc/testsuite/rust/rustc/ui/hygiene/hygienic-label-4.rs
macro_rules! foo {
    ($e: expr) => { 'x: for _ in 0..1 { $e } }
}

pub fn main() {
    foo!(break 'x); // { dg-error ".E0426." "" { target *-*-* } }
}

